<resources>
    <string name="app_name">Muviz</string>
    <string name="sort">Sort By:</string>
    <string name="popularity">Popularity</string>
    <string name="ratings">Ratings</string>
    <string name="filter">Filter</string>
    <string name="change_order">Order By:</string>
    <string name="title_activity_settings">Settings</string>
    <string name="asc">Ascending</string>
    <string name="desc">Descending</string>
    <string name="save_settings">Save Changes</string>
    <string name="settings">Settings</string>
    <string name="poster_descr">Shows the poster of the movie</string>
    <string name="no_conn_desc">image for no connection</string>
    <string name="retry">Retry</string>
    <string name="no_conn_message">Go get some popcorn or connect to the internet!</string>
    <string name="big_poster">poster of selected image</string>
    <string name="title">Title</string>
    <string name="release_date">Release Date</string>
    <string name="movie_plot">Movie Plot</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="reviews">Reviews</string>
    <string name="favourites">Favourites</string>
    <string name="image_transition">image_transition</string>
</resources>
